--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,554 @@
-.App {
+*{
+  padding: 0px;
+  margin: 0px;
+}
+body {
+    background-image: url("../src/image/back8.png") !important;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    overflow-x: hidden;
+}
+#nav1{
+    width: 100%;
+    background-color: #1d1d1d !important;
+    padding: 15px 0;
+    position: fixed;
+    z-index: 99999;
+}
+#link1{
+  color: white;
+  text-decoration: none;
+  letter-spacing: 0.8px;
+  padding: 5px 25px;
+  font-size: 20px;
+}
+#link1:focus{
+  color:rgb(250, 194, 203);
+  text-decoration: underline;
+  
+}
+.img1{
+  height: 70px;
+  width: 70px;
+  border-radius:50% ;
+  -webkit-border-radius:50% ;
+  -moz-border-radius:50% ;
+  -ms-border-radius:50% ;
+  -o-border-radius:50% ;
+}
+.r-icon{
+      display: flex;
+    align-items: center;
+}
+.icon1{
+  width:30px;
+  height: 30px;
+  border-radius: 50%;
+  color:rgb(255, 255, 255);
+  display: inline-flex;
+  margin-left: 1rem;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.btn1{
+  position: relative;
+  width: 180px;
+  height: 50px;
+  border: 1px ,solid,black   !important;
+  color: white;
+  font-size: 20px;
+  background-color: transparent;
+}
+.btn1::before{
+    content:"";
+    position: absolute;
+    width: 0;
+    height: 100%;
+    top:0;
+    left: 0;
+    transition: .5s ;
+    z-index: -1;
+    -webkit-transition: .5s ;
+    -moz-transition: .5s ;
+    -ms-transition: .5s ;
+    -o-transition: .5s ;
+}
+.btn1:hover::before{
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 100%;
+}
+/* Home section */
+#home{
+  padding: 260px 0 100px 0;
+}
+
+.div-home1{
+    display: inline-block;
+    letter-spacing: 0.8px;
+    padding: 8px 10px;
+    margin-bottom: 1rem;
+    border: 2px  solid #823397;
+    background-image: linear-gradient(45deg, #823397, rgb(179, 173, 173));
+    background-size: 100% 100%;
+    color: rgb(28, 12, 32);
+    font-size: 18px;
+    font-weight: bold;
+}
+.para1{
+    color: white;
+    width: 400px;
+    height: 240px;
+    font-size: 34px;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+
+
+.animation-div{
+  animation-name: pic;
+  animation-duration: 4s;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+}
+.img2{
+  width: 100%;
+  height: 400px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+@keyframes pic{
+ 0%{
+  transform: translateY(-15px);
+  -webkit-transform: translateY(-15px);
+  -moz-transform: translateY(-15px);
+  -ms-transform: translateY(-15px);
+  -o-transform: translateY(-15px);
+}
+ 50%{
+  transform: translateY(15px);
+  -webkit-transform: translateY(15px);
+  -moz-transform: translateY(15px);
+  -ms-transform: translateY(15px);
+  -o-transform: translateY(15px);
+}
+ 100%{
+  transform: translateY(-15px);
+  -webkit-transform: translateY(-15px);
+  -moz-transform: translateY(-15px);
+  -ms-transform: translateY(-15px);
+  -o-transform: translateY(-15px);
+}
+}
+#last-home-div{
+  color:white;
+  font-size: 16px;
+  text-transform: capitalize;
+}
+#para2{
+  color:blueviolet;
+  font-size: 16px;
+  font-weight: bold;
+  padding-top: 30px;
+}
+.icon2{
+  color: blueviolet;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+/* skill section */
+
+#skill{
+  height: 70vh;
+ background-color:rgb(17, 17, 17) ;
+  margin:50px auto;
+  position:relative;
+}
+.skill-div1{
+    margin: auto;
+    margin-top: -50px;
+    background-color: rgb(0 0 0);
+    width: 80%;
+    height: 400px;
+    padding: 50px,0;
+    border-radius: 35px;
+    position: relative;
+    -webkit-border-radius: 35px;
+    -moz-border-radius: 35px;
+    -ms-border-radius: 35px;
+    -o-border-radius: 35px;
+}
+.title-skill{
+  letter-spacing: 2px;
+  text-align: center;
+  color:rgb(145, 47, 145);
+  font-size: 36px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-align: center;
+  padding-top: 50px;
+
+}
+.para3{
+padding-top: 10px;
+color:whitesmoke;
+font-size: 15px;
+letter-spacing: 2px;
+text-transform: capitalize;
+text-align: center;
+}
+
+.circle1{
+  width:100px;
+ height: 100px;
+
+}
+ .d1{
+  margin-top: 30px;
+  margin-right: 20px;
+ }
+
+.card1{
+    padding-top: 10px;
+    text-align: center;
+    color: rgb(255 255 255) !important;
+    font-weight: bold;
+}
+
+/* project section */
+
+
+.project {
+  padding: 80px 0 120px 0;
+  position: relative;
+}
+.project h2 {
+    font-size: 45px;
+    font-weight: 700;
+    text-align: center;
+    color: white;
+}
+.project p {
+  color: #B8B8B8;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 14px auto 30px auto;
+  text-align: center;
+  width: 56%;
+}
+.project .nav.nav-pills {
+  width: 72%;
+  margin: 0 auto;
+  border-radius: 50px;
+  background-color: #ffffff1a;
+  overflow: hidden;
+}
+.project .nav.nav-pills .nav-item {
+  width: calc(100%/3);
+}
+.project .nav.nav-pills .nav-link {
+  background-color: transparent;
+  border-radius: 0;
+  padding: 17px 0;
+  color: #fff;
+  width: 100%;
+  font-size: 17px;
+  letter-spacing: 0.8px;
+  font-weight: 500;
+  position: relative;
+  transition: 0.3s ease-in-out;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.project .nav.nav-pills .nav-link::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(90deg, rgb(4, 169, 180) , rgba(111, 85, 230, 0.5) );
+    z-index: -1;
+    transition: 0.3s ease-in-out;
+}
+.project .nav.nav-pills .nav-link.active::before {
+    width: 100% !important;
+}
+#project-tabs-tab-second {
+ border-right: 1px solid rgba(255, 255, 255, 0.5);
+ border-left: 1px solid rgba(255, 255, 255, 0.5);
+} 
+.project-img {
+  position: relative;
+  border-radius: 30px;
+  overflow: hidden;
+  margin-bottom: 24px;
+  height: 300px !important;
+}
+.project-img::before {
+  content: "";
+  background: linear-gradient(90deg, rgb(10, 61, 65) , rgba(80, 61, 161, 0.5) );
+  opacity: 0.85;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  transition: 0.4s ease-in-out;
+}
+.project-img:hover::before {
+  height: 100%;
+}
+.project-text {
+  position: absolute;
+  text-align: center;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.5s ease-in-out;
+  opacity: 0;
+  width: 100%;
+}
+.project-img:hover .project-text {
+  top: 50%;
+  opacity: 1;
+}
+.project-text h4 {
+  font-size: 30px; 
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1.1em;
+}
+.project-text p {
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  color: #fff;
+}
+.project-text button {
+    padding: .5rem 3rem;
+    background: linear-gradient(90.21deg, #6a31a7, #7567d7 111.58%);
+    border-radius: 2rem;
+    font-size: 1.5rem;
+    color: white;
+    transition: all 3s;
+    border: none;
+}
+.project-text button:hover{
+  background: linear-gradient(90.21deg, #4A2FBD  , #218c96);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Form section */
+
+.sec2{
+  padding: 60px 0 200px 0;
+}
+.image-div{
+
+ overflow: hidden;
+ width:300px;
+ height:300px;
+ border-radius: 50%;
+ animation-name:pic1;
+ animation-duration: 4s ;
+ animation-iteration-count: infinite;
+ -webkit-border-radius: 50%;
+ -moz-border-radius: 50%;
+ -ms-border-radius: 50%;
+ -o-border-radius: 50%;
+ margin-top: -50px;
+}
+@keyframes pic1{
+  0%{
+    transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+}
+50%{
+   transform: 1.5;
+   -webkit-transform: 1.5;
+   -moz-transform: 1.5;
+   -ms-transform: 1.5;
+   -o-transform: 1.5;
+}
+100%{
+  transform: 0.5;
+  -webkit-transform: 0.5;
+  -moz-transform: 0.5;
+  -ms-transform: 0.5;
+  -o-transform: 0.5;
+}
+}
+.anm-img2{
+  width:100%;
+  height:100%;
+  object-fit: cover;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* form code */
+
+
+.title-form1{
+   font-size: 32px;
+   font-weight:bold;
+   color:rgb(139, 62, 139);
+   padding-bottom: 40px;
+}
+/* /*input type text code */
+
+#t1{
+    width: 100%;
+    border-radius: 15px;
+    background-color: rgb(255 255 255);
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    color: white;
+    margin: 0 0 8px 0;
+    padding: 19px 25px;
+
+}
+.textarea1{
+  margin: 0 0 8px 0;
+  padding: 19px 25px;
+  background-color: rgb(252, 229, 252) !important;
+  border-radius: 20px;
+  -webkit-border-radius:20px;
+  -moz-border-radius:20px;
+  -ms-border-radius:20px;
+  -o-border-radius:20px;
+}
+#t1:focus{
+  background-color:white;
+  border:1px solid purple;
+}
+.textarea1:focus{
+ background-color: white;
+}
+.btn3{
+  width: 120px;
+  height: 50px;
+  margin-top: 1rem;
+  background-color: rgb(114, 112, 112);
+  color:white;
+  border-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+/* Footer section */
+
+.last-sec{
+    height: 75vh;
+    background-image: url(http://localhost:3000/static/media/footer-bg.7bd67c0f73571d0acc02.png);
+    background-size: 100% 100%;
+    margin: auto;
+}
+.last-card{
+  height: 180px;
+  border-radius: 35px;
+  -webkit-border-radius:35px;
+  -moz-border-radius:35px;
+  -ms-border-radius:35px;
+  -o-border-radius:35px;
+  margin: auto;
+  background-color: whitesmoke;
+  margin-top:-80px;
+   padding-top: 35px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.last-para{
+  text-transform: capitalize;
+ font-size:14px;
+ letter-spacing: 2px;
+ font-style: italic;
+ margin-top:80px;
+ margin-left:20px;
+
 }
+.last-column{
+  top: 40px;
+}
+.form2{
+    border: 2px solid purple;
+    width: 80%;
+    height: 40px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    margin-top: -40px;
+  
+}
+.email-text{
+  border-style: none;
+  padding: 12px;
+  opacity: 0.5;
+  outline-style: none;
+  z-index: -1;
+}
+.btn4{
+  width: 130px;
+  height: 30px;
+  margin-top:-70px;
+  margin-left: 180px;
+  border-radius: 6px;
+  -webkit-border-radius:6px;
+  -moz-border-radius:6px;
+  -ms-border-radius:6px;
+  -o-border-radius:6px;
+  border-color: rgb(185, 131, 185);
+  background-image: linear-gradient(90deg,rgb(240, 193, 201),grey);
+  color:white;
+  background-color: #8c3490;
+  border: none;
+ 
+}
+.last-icon{
+ text-align: right;
+ margin-top:250px;
+  
+}
+.copy-div{
+    width: 600px;
+    padding-top: 10px;
+    text-align: center;
+    overflow-x: hidden;
+
+}
+.l-para{
+    font-weight: bold;
+    color: white;
+    font-size: 14px;
+    text-transform: capitalize;
+}
+#submit{
+    background-color: #8c3490;
+    border: none;
+}
+   
+.btn4{
+  background-color: #218c96;
+}
+
+.last-sec{
+      flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
